--- a/ui-app/src/app/admin/franchise/franchise.component.html
+++ b/ui-app/src/app/admin/franchise/franchise.component.html
@@ -47,13 +47,13 @@
       </nav>
     </div>
 
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
+    <main role="main" class="col-md-9 col-lg-10">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-        <h1 class="h2"><i class="fas fa-book"></i> Courses</h1>
+        <h1 class="h2"><i class="fas fa-archway"></i> Franchises</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group mr-2">
             <button type="button" class="btn btn-sm btn-outline-primary"
-              data-toggle="modal" data-target="#courseModal"><i title="View" class="fas fa-plus"></i>
+              data-toggle="modal" data-target="#exampleModal"><i title="View" class="fas fa-plus"></i>
               Add New</button>
           </div>
         </div>
@@ -135,39 +135,102 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="courseModal" tabindex="-1" aria-labelledby="courseModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl">
     <div class="modal-content p-1">
       <div class="modal-header bg-primary text-white">
-        <h5 class="modal-title" id="courseModalLabel">Course Details</h5>
+        <h5 class="modal-title" id="exampleModalLabel">
+          <i class="fas fa-archway pr-2"></i>
+          Franchise Details</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-        <form>
-          <div class="form-group">
-            <label for="inputCourse">Course</label>
-            <input type="text" class="form-control" id="inputCourse">
-          </div>
-          <div class="form-group">
-            <label for="inputDescription">Description</label>
-            <textarea class="form-control" id="inputDescription" placeholder="Required description" required></textarea>
-          </div>
-          <div class="form-group">
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" id="gridCheck">
-              <label class="form-check-label" for="gridCheck">
-                Active
-              </label>
+      <form [formGroup]="inputForm" (ngSubmit)="onSubmit()">
+        <div class="modal-body">
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="inputFirstName">First Name</label><small class="text-danger"> *</small>
+              <input type="text" formControlName="firstName" class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" id="inputFirstName">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="inputLastName">Last Name</label><small class="text-danger"> *</small>
+              <input type="text" formControlName="lastName" class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" id="inputLastName">
             </div>
           </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary btn-sm">Save changes</button>
-      </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="inputEmail">Email</label><small class="text-danger"> *</small>
+              <input type="email" formControlName="email" class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.email.errors }" id="inputEmail">
+            </div>
+            <div class="form-group col-md-3">
+              <label for="inputPrimaryPhone">Primary Phone</label><small class="text-danger"> *</small>
+              <input type="tel" formControlName="primaryPhone" class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.primaryPhone.errors }" id="inputPrimaryPhone">
+            </div>
+            <div class="form-group col-md-3">
+              <label for="inputSecondaryPhone">Secondary Phone</label>
+              <input type="tel" formControlName="secondaryPhone" class="form-control" id="inputSecondaryPhone">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="inputAddressLine1">Address</label><small class="text-danger"> *</small>
+              <input type="text" formControlName="addressLine1" class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.addressLine1.errors }" id="inputAddressLine1">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="inputAddress2">Address 2</label>
+              <input type="text" formControlName="addressLine2" class="form-control" id="inputAddressLine2">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-3">
+              <label for="inputCity">City</label><small class="text-danger"> *</small>
+              <input type="text" formControlName="city" class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.city.errors }" id="inputCity">
+            </div>
+            <div class="form-group col-md-3">
+              <label for="inputState">State</label><small class="text-danger"> *</small>
+              <input type="text" formControlName="state" class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.state.errors }" id="inputState">
+            </div>
+            <div class="form-group col-md-4">
+              <label for="inputCountry">Country</label><small class="text-danger"> *</small>
+              <select class="custom-select mr-sm-2" id="inputCountry" formControlName="country"
+              [ngClass]="{ 'is-invalid': submitted && f.country.errors }">
+                <option selected>Choose...</option>
+                <option value="Canada">Canada</option>
+                <option value="USA">United States</option>
+              </select>
+            </div>
+            <div class="form-group col-md-2">
+              <label for="inputZip">Zip</label><small class="text-danger"> *</small>
+              <input type="text" formControlName="postcode" class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.postcode.errors }" id="inputZip">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <div class="custom-control custom-checkbox">
+                <input type="checkbox" formControlName="isActive" class="custom-control-input" id="inputActive">
+                <label class="custom-control-label" for="inputActive">Active</label>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">
+            <i class="fas fa-window-close pr-2"></i>
+            Close</button>
+          <button type="submit" class="btn btn-primary btn-sm">
+            <i class="fas fa-save pr-2"></i>
+            Save changes</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
