--- a/ui-app/src/app/admin/practice-questions/practice-questions.component.html
+++ b/ui-app/src/app/admin/practice-questions/practice-questions.component.html
@@ -10,6 +10,12 @@
                 Back To Dashboard <span class="sr-only">(current)</span>
               </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active" routerLink="/admin/topics">
+                <i class="fas fa-angle-double-left"></i>
+                Back To Questions Section <span class="sr-only">(current)</span>
+              </a>
+            </li>
           </ul>
           <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
             <span>Saved reports</span>
@@ -49,7 +55,7 @@
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-        <h1 class="h2"><i class="fas fa-book"></i> Courses</h1>
+        <h1 class="h2"><i class="fas fa-book"></i> Practice Question</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group mr-2">
             <button type="button" class="btn btn-sm btn-outline-primary"
