--- a/ui-app/src/app/admin/users/users.component.html
+++ b/ui-app/src/app/admin/users/users.component.html
@@ -49,7 +49,7 @@
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-        <h1 class="h2"><i class="fas fa-book"></i> Courses</h1>
+        <h1 class="h2"><i class="fas fa-book"></i> Users</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group mr-2">
             <button type="button" class="btn btn-sm btn-outline-primary"
