--- a/ui-app/src/app/layout/header/header.component.html
+++ b/ui-app/src/app/layout/header/header.component.html
@@ -12,25 +12,31 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <ul class="navbar-nav mr-auto"></ul>
+  <select (change)="selectTheme($event)" style="width: 180px;" class="form-control form-control-sm m-2" name="styleSheet">
+    <option>Select Theme</option>
+    <option value="light">Light</option>
+    <option value="dark">Dark</option>
+  </select>
 </nav>
 
 <nav *ngIf="getUserType() ==='tutor'" class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link text-white" href="#">Home</a>
+        <a class="nav-link text-white" href="/admin">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="#">Courses</a>
+        <a class="nav-link text-white" href="/admin/courses">Courses</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="#">Students</a>
+        <a class="nav-link text-white" href="/admin/student">Students</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" routerLink="admin">Admin</a>
+        <a class="nav-link text-white" routerLink="/admin/users">User Admin</a>
       </li>
     </ul>
     <span>
+
       <div
         class="btn-group"
         role="group"
